[package]
name = "tetrust"
version = "0.1.0"
edition = "2021"
license = "MIT"
publish = false

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
console_error_panic_hook = "0.1"
web-sys = { version = "0.3", features = [
  "Window",
  "Document",
  "Element",
  "HtmlElement",
  "HtmlCanvasElement",
  "CanvasRenderingContext2d",
  "KeyboardEvent",
  "PointerEvent",
  "Event",
  "EventTarget",
  "Performance",
  "CssStyleDeclaration",
  "DomRect",
] }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
